--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,114 @@
+@font-face {
+    font-family: Mostwasted;
+    src: url(../fonts/Mostwasted.ttf);
+}
+
+html {
+    max-width: 93%;
+    margin: 0 auto;
+}
+
+body {
+    background: black;
+}
+
 header {
-    text-align: center;
-    font-size: 50px;
-    color: indigo;
-    font-weight: bold;
+    position: relative;
+    z-index: -1;
+    background: url(../images/bannerbg.jpg);
+    border: 1px groove rgb(212, 2, 2);
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#title {
+    color: rgb(0, 0, 0);
+    text-shadow: 0 0 5px white, 0 0 19px rgb(255, 0, 0);
+    padding-left: 30px;
+    margin-top: 5px;
+    margin-left: 40px;
+    font-size: 90px;
+    font-family: Mostwasted;
+}
+
+#streetText {
+    color: rgb(212, 2, 2);
+    text-shadow: 0 0 7px black, 0 0 19px rgb(255, 0, 0);
+}
+
+.container {
+    max-width: 100%;
+    margin-left: 35px;
+}
+
+#col1 {
+    background: url(../images/bannerbg.jpg);    
+    border: 1px groove rgb(212, 2, 2);
+    margin-top: 25px;
+    margin-right: 15px;
+}
+
+#video {
+    border: 1px groove rgb(212, 2, 2);
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 95%;
+}
+
+#searchBTN {
+    margin-top: 13px;
+}
+
+.searchBar {
+    background: black;
+    border: 1px solid rgb(212, 2, 2);
+    color: white;
+}
+
+.submitBTN {
+    background: black;
+    border: 1px solid rgb(212, 2, 2);
+    color: white;
+}
+
+#clear-result {
+    background: black;
+    border: 1px solid rgb(212, 2, 2);
+    color: rgb(212, 2, 2);
+}
+
+#text1 {
+    color: white;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-top: 1px groove rgb(212, 2, 2);
+    padding-top: 15px;
+}
+
+#col2 {
+    background: url(../images/bannerbg.jpg);    
+    border: 1px groove rgb(212, 2, 2);
+    margin-top: 25px;
+}
+
+#lyrics {
+    color: white;
+    margin-top: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+footer {
+    color: rgb(212, 2, 2);
+    background: url(../images/bannerbg.jpg);
+    border: 1px groove rgb(212, 2, 2); 
+    margin-top: 30px;
+    margin-bottom: 1px;  
+    padding-top: 10px;
+    padding-bottom: 10px;     
 }
