--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,10 @@ body {
 }
 
 header {
-    position: relative;
-    z-index: -1;
+    margin: 0 auto;
+    text-align: center;
     background: url(../images/bannerbg.jpg);
     border: 1px groove rgb(212, 2, 2);
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 #title {
@@ -49,9 +44,11 @@ header {
     border: 1px groove rgb(212, 2, 2);
     margin-top: 25px;
     margin-right: 15px;
+    min-height: 300px;
+    max-height: 900px;    
 }
 
-#video {
+iframe {
     border: 1px groove rgb(212, 2, 2);
     margin-top: 30px;
     margin-left: 15px;
@@ -61,6 +58,10 @@ header {
 
 #searchLyrics {
     margin-top: 13px;
+}
+
+#term-input1 {
+    margin-bottom: 5px;
 }
 
 .searchBar {
@@ -79,6 +80,8 @@ header {
     background: black;
     border: 1px solid rgb(212, 2, 2);
     color: rgb(212, 2, 2);
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 #def-box {
@@ -88,19 +91,28 @@ header {
     margin-right: 15px;
     border-top: 1px groove rgb(212, 2, 2);
     padding-top: 15px;
+    overflow-y: auto;
+    height: 40%;
 }
 
 #col2 {
     background: url(../images/bannerbg.jpg);    
     border: 1px groove rgb(212, 2, 2);
     margin-top: 25px;
+    min-height: 300px;
+    max-height: 900px;
 }
 
-#lyrics {
+#lyrics, #songTitle, h1, h4, h6 {
     color: white;
     margin-top: 30px;
     margin-left: 15px;
     margin-right: 15px;
+}
+
+#lyrics {
+    overflow-y: scroll;
+    max-height: 675px;
 }
 
 footer {
@@ -111,4 +123,8 @@ footer {
     margin-bottom: 1px;  
     padding-top: 10px;
     padding-bottom: 10px;     
+}
+
+::-webkit-scrollbar {
+    color: black;
 }
